aws/projects/101-kittens-carousel-static-website-ec2/deneme_template.yml
AWSTemplateFormatVersion: 2010-09-09

Description: >
  CloudFormation Template for Kittens Carousel Static Website on EC2.
  This template deploys Kittens Carousel Static Website on Amazon Linux 2
  (ami-09d95fab7fff3776c) EC2 Instance with custom security group 
  allowing http connections on port 80. Kittens Carousel Static Website 
  is downloaded from Github repository, then deployed on Apache Web Server.

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-09d95fab7fff3776c
      InstanceType: t2.micro
      KeyName: o 
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:                
        -                        
          Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack   
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
              yum update -y              
              yum install httpd -y              
              systemctl start httpd
              systemctl enable httpd
              cd /var/www/html/
              sudo chmod -R 777 /var/www/html/
              wget https://raw.githubusercontent.com/ayuksl/GIT_me/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/index.html
              wget https://raw.githubusercontent.com/ayuksl/GIT_me/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat0.jpg
              wget https://raw.githubusercontent.com/ayuksl/GIT_me/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat1.jpg
              wget https://raw.githubusercontent.com/ayuksl/GIT_me/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat2.jpg   
  
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
